--- a/app/UI/Modules/Base/templates/@layout.latte
+++ b/app/UI/Modules/Base/templates/@layout.latte
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" href="{$basePath}/favicon.ico">
 
 	<!-- Seo -->
-	<title>{block #title|stripHtml|trim}EDU-Konf{/block} | Contributte</title>
+	<title>{block #title|stripHtml|trim}EDU-Konf{/block}</title>
 
 	<!-- Meta -->
 	<meta name="description" n:ifset="#description" content="{include #description}">
