--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -73,31 +73,35 @@
 	</div>
 
 
-        <footer>
-            <div class="container py-5">
-                <div class="row gy-3">
-                    <div class="col-md">
-                    <div class="contact-info">
-                        <h3 class="mb-2">Buďme v kontaktu</h3>
-                        <div class="d-flex align-items-center my-3">
-                        <i class="fa fa-envelope contact-icon circle-icon"/>
+<footer>
+    <div class="container py-5">
+        <div class="row gy-3">
+            <div class="col-md">
+                <div class="contact-info">
+                    <h3 class="mb-2">Buďme v kontaktu</h3>
+                    <div class="d-flex align-items-center my-3">
+                        <i class="fa fa-envelope contact-icon circle-icon"></i>
                         <div>
                             <div>Email</div>
                             <div>info@edu-konf.cz</div>
                         </div>
-                        </div>
-                        <div class="d-flex align-items-center">
-                        <i class="fa fa-map contact-icon circle-icon"/>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <i class="fa fa-map contact-icon circle-icon"></i>
                         <div>
                             <div>Adresa</div>
                             <div>Brno, Česká republika</div>
                         </div>
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+        <div class="text-center mt-4 text-secondary">
+            <small>&copy; 2024 Edu-Konf. Všechna práva vyhrazena. Autoři: Jakub Jeřábek (xjerab28), Doubravka Šimůnková (xsimun05), Vojtěch Teichmann (xteich02)</small>
+        </div>
+    </div>
+</footer>
+
 
 <div class="modal fade" id="dialog-conf-create" tabindex="-1" aria-labelledby="dialog-label" aria-hidden="true">
 	<div class="modal-dialog">
